updated hiding the api in notebooks

--- a/notebooks/Trailing Stops.ipynb
+++ b/notebooks/Trailing Stops.ipynb
@@ -600,7 +600,7 @@
     "# and stores the results.\n",
     "def main(currency_pairs):\n",
     "    # The api key given by the professor\n",
-    "    key = \"beBybSi8daPgsTp5yx5cHtHpYcrjp5Jq\"\n",
+    "    key = input(\"Enter Your API:\")\n",
     "   \n",
     "    # Number of list iterations - each one should last about 1 second\n",
     "    count = 0\n",
