--- a/notebooks/get_data.ipynb
+++ b/notebooks/get_data.ipynb
@@ -227,7 +227,7 @@
     "# and stores the results.\n",
     "def main(currency_pairs):\n",
     "    # The api key given by the professor\n",
-    "    key = \"beBybSi8daPgsTp5yx5cHtHpYcrjp5Jq\"\n",
+    "    key = input(\"Enter Your API:\")\n",
     "   \n",
     "    # Number of list iterations - each one should last about 1 second\n",
     "    count = 0\n",
@@ -334,9 +334,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data engineering PyCaret",
+   "display_name": "base",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -348,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
