Revert "testing, remove input in get_data"
This reverts commit 0d06c483d6340fb55055b56afecaaf9d3e65616c.

t push" to publish your local commits)

--- a/notebooks/get_data.ipynb
+++ b/notebooks/get_data.ipynb
@@ -227,7 +227,7 @@
     "# and stores the results.\n",
     "def main(currency_pairs):\n",
     "    # The api key given by the professor\n",
-    "    key = input(\"\")\n",
+    "    key = input(\"Enter Your API:\")\n",
     "   \n",
     "    # Number of list iterations - each one should last about 1 second\n",
     "    count = 0\n",
