first test commit in master branch

--- a/notebooks/get_data.ipynb
+++ b/notebooks/get_data.ipynb
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This main function repeatedly calls the polygon api every 1 seconds for 10 hours \n",
+    "# This main function repeatedly calls the polygon api every 1 seconds for 10 hours #########################\n",
     "# and stores the results.\n",
     "def main(currency_pairs):\n",
     "    # The api key given by the professor\n",
